--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <p id="header">Happy Valentine's Day Babyyy!</p>
         <p>Hi babyy Happy Valentines Day! First of all, thank you for being my girlfriend. Thank you saimo support saako through the years. I'm so sorry babyy
           kay sige nalang ta away tungod saako. Sorry kaayo. Even though wala ta nag talk these past few days wala gihapon nawala ako feelings saimo baby.
-          I love you always and dili nana mag bago. Gusto nako ma okay nata babe. Gusto ko magbalik nata. Unta ma okay nata.
-           I miss you. Miss najud kaayo tika. Do your best always sa studies babyy. Sorry dili ko kauli karon because naa ko exam. Mag bawi lang ko saimoha pag makauli ko hehe.
+          I love you always and dili nana mag bago. I miss you. Miss najud kaayo tika. Do your best always sa studies babyy. Sorry dili ko kauli karon because naa ko exam. Mag bawi lang ko saimoha pag makauli ko hehe.
           Ingat mo always diha nila Sasha baby. Happy Valentines Day usaabb, I love youu alwayss ♡♡♡
         </p>
       </div>
